Fix notification banner spacing

--- a/scss/common/_notification.scss
+++ b/scss/common/_notification.scss
@@ -12,11 +12,6 @@
   }
 }
 
-.alert-bootstrap-mode,
-.consent_banner {
-  margin-bottom: $spacer-lg;
-}
-
 [id='modal-alert'] {
   border-radius: 0;
   box-shadow: none;
